# blogc

./: .cente.yml  .gitignore  CMakeLists.txt  README.md  config.h.in
.cente/: Dockerfile
.github/workflows/: main.yml  package.yml  test.yml
cmake/cpack/: install_license_and_readme.cmake  install_version.cmake
cmake/scripts/: test.sh
src/blogc/: content-parser.c  main.c
src/blogc-git-receiver/: CMakeLists.txt
src/blogc-make/: CMakeLists.txt  main.c
src/blogc-runserver/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/blogc/: CMakeLists.txt  check_blogc.sh.in
tests/blogc-git-receiver/: CMakeLists.txt  check_post_receive.sh.in  check_pre_receive.sh.in  check_shell.sh.in
tests/blogc-make/: CMakeLists.txt  check_blogc_make.sh.in
tests/blogc-runserver/: CMakeLists.txt
tests/common/: CMakeLists.txt
